--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -47,7 +47,7 @@ jobs:
           black .
     - name: pip install   
       run: |
-        pip install -r requirements.txt
+        pip install .
         
     - name: Run tests 
       run: |
