--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python package
+name: QOKit test
 
 on: # workflow_dispatch
  push:
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-       python-version: ["3.8", "3.9"]
+       python-version: ["3.9", "3.10", "3.11"]
         
     steps:
     - uses: actions/checkout@v3
@@ -44,17 +44,13 @@ jobs:
         pip install pipreqs black addheader pytest-cov pip-licenses
     - name: black check
       run:  |
-          black .
+          black --check .
     - name: pip install   
       run: |
-        pip install .
-        
+          pip install .  
     - name: Run tests 
       run: |
-         pytest -rs tests 
-    - name: Run test covarage report
-      run: |
-        pytest  --cov=qokit --cov-fail-under=75
+         pytest --cov=qokit --cov-fail-under=75 -rs tests 
     - name: License check
       run: |
         pip-licenses --format=markdown --order=license
