--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -35,5 +35,6 @@ jobs:
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
-        user: jpmc-oss
+        user: __token__
         password: ${{ secrets.PYPI_API_JPMC_OSS }}
+        print_hash: true
