--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ authors = [
    ]
 license = {file = "LICENSE"}
 classifiers=[
-    "Development Status :: Pre-Alpha",
-    "License :: OSI Approved :: Apache-2.0",
+    "Development Status :: 2 - Pre-Alpha",
+    "License :: OSI Approved :: Apache Software Licens",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
