--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,9 @@ solvers = [
 ]
 
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=45",
+"wheel",
+"setuptools_scm[toml]>=6.2",]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
