--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -5,7 +5,8 @@ name: QOKit test
 
 on: # workflow_dispatch
  push:
-   branches: [ "main", "**" ]
+   #branches: [ "main", "**" ]
+   branches: [ "main"]
  pull_request:
    branches: [ "main" ]
 
