--- a/.github/workflows/pypi-test.yml
+++ b/.github/workflows/pypi-test.yml
@@ -2,27 +2,49 @@ name: Test run v1
 
 on:
   workflow_dispatch:
-#  pull_request:
+  pull_request:
   
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build_wheels:
+    name: Build wheels on ${{matrix.os}}
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04, windows-2022, macos-11]
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - name: Build Wheels
+        uses: pypa/cibuildwheel@v2.16.1
+      - uses: actions/upload-artifact@v3
         with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install build
-      - name: Build package
-        run: python -m build
-      - name: Publish package to test.pypi
-        uses: pypa/gh-action-pypi-publish@release/v1
+          path: ./wheelhouse/*.whl
+
+  build_sdist:        
+    name: Build Source Distribution
+    runs-on: ubuntu-latest
+    steps: 
+      - uses: actions/checkout@v4
+      - name: Build sdist
+        run: pipx run build --sdist
+      - uses: actions/upload-artifacts@v3
+        with:
+          path: dist/*.tar.gz  
+
+  upload_pypi:
+    needs: [build_wheels, build_sdist]
+    runs-on: ubuntu-latest
+    environment: pypi
+    permissions: 
+      id-token: write
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: artifact
+          path: dist
+
+      - uses: pypa/gh-action-pypi-publish@release/v1      
         with:
           user: __token__
           password: ${{ secrets.PYPI_TEST_API_JPMC_OSS }}
