Test GitHub Action in Feature Branch

--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -6,9 +6,9 @@ name: QOKit test
 on: # workflow_dispatch
  push:
    #branches: [ "main", "**" ]
-   branches: [ "main"]
+   #branches: [ "main"]
  pull_request:
-   branches: [ "main" ]
+   #branches: [ "main" ]
 
 jobs:
   build:
