--- a/.github/workflows/pypi-test.yml
+++ b/.github/workflows/pypi-test.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build sdist
         run: pipx run build --sdist
-      - uses: actions/upload-artifacts@v3
+      - uses: actions/upload-artifact@v3
         with:
           path: dist/*.tar.gz  
 
