--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -7,7 +7,7 @@ on: # workflow_dispatch
  push:
    #branches: [ "main", "**" ]
    #branches: [ "main"]
- pull_request:
+# pull_request:
    #branches: [ "main" ]
 
 jobs:
