--- a/.github/workflows/pypi-test.yml
+++ b/.github/workflows/pypi-test.yml
@@ -6,20 +6,20 @@ on:
   
 
 jobs:
-  # build_wheels:
-  #   name: Build wheels on ${{matrix.os}}
-  #   runs-on: ${{matrix.os}}
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu-22.04, windows-2022, macos-11]
+  build_wheels:
+    name: Build wheels on ${{matrix.os}}
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04, windows-2022, macos-11]
 
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Build Wheels
-  #       uses: pypa/cibuildwheel@v2.16.1
-  #     - uses: actions/upload-artifact@v3
-  #       with:
-  #         path: ./wheelhouse/*.whl
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build Wheels
+        uses: pypa/cibuildwheel@v2.16.1
+      - uses: actions/upload-artifact@v3
+        with:
+          path: ./wheelhouse/*.whl
 
   build_sdist:        
     name: Build Source Distribution
