Test GitHub Action in Feature Branch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,8 +58,7 @@ solvers = [
 
 [build-system]
 requires = ["setuptools>=45",
-"wheel",
-"setuptools_scm[toml]>=6.2",]
+"wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
