--- a/.github/workflows/pypi-test.yml
+++ b/.github/workflows/pypi-test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-22.04] # ubuntu-22.04 ,, macos-11, windows-2022]
+        os: [ubuntu-22.04, macos-11, windows-2022]
 
     steps:
       - uses: actions/checkout@v4
