--- a/.github/workflows/pypi-test.yml
+++ b/.github/workflows/pypi-test.yml
@@ -1,4 +1,4 @@
-name: Test run v1
+name: Upload Python Package to PyPI Test
 
 on:
   workflow_dispatch:
@@ -7,11 +7,12 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{matrix.os}}
+    name: Build wheels on ${{ matrix.python }} - ${{matrix.os}}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
         os: [ubuntu-22.04, macos-11, windows-2022]
+        python: ["cp39", "cp310", "cp311"]
 
     steps:
       - uses: actions/checkout@v4
@@ -33,7 +34,7 @@ jobs:
           path: dist/*.tar.gz  
 
   upload_pypi:
-    needs: [build_sdist]
+    needs: [build_sdist, build_wheels]
     runs-on: ubuntu-latest
     environment: pypi
     permissions: 
