--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -5,10 +5,9 @@ name: QOKit test
 
 on: # workflow_dispatch
  push:
-   #branches: [ "main", "**" ]
-   #branches: [ "main"]
-# pull_request:
-   #branches: [ "main" ]
+   branches: [ "main", "**" ]
+ pull_request:
+   branches: [ "main" ]
 
 jobs:
   build:
