to add the package data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,9 @@ omit = [
     "qokit/fur/mpi_custatevec/*",
     "qokit/fur/diagonal_precomputation/gpu_numba.py",
     ]
+[tool.setuptools.packages.find]
+where = ["qokit"]    
+
 [tool.setuptools.package-data]
 assets = ["*.json", "*.scv", "*.zip"]
 [tool.setuptools.dynamic]
