--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,9 +97,7 @@ where = ["qokit"]
 
 [tool.setuptools.package-data]
 assets = ["*.json"]
-"assets.maxcut_datasets" = ["*.json"]
-"assets.precomputed_bitstrings" = ["*.json"]
-"assets.precomputed_merit_factors = ["*.json"]
+"assets.*" = ["*.json"]
 [tool.setuptools.dynamic]
 
 [tool.pyright]
