to add the package data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,9 @@ where = ["qokit"]
 
 [tool.setuptools.package-data]
 assets = ["*.json"]
+assets.maxcut_datasets = ["*.json"]
+assets.precomputed_bitstrings = ["*.json"]
+assets.precomputed_merit_factors = ["*.json"]
 [tool.setuptools.dynamic]
 
 [tool.pyright]
