to add the package data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,8 +98,8 @@ where = ["qokit"]
 [tool.setuptools.package-data]
 assets = ["*.json"]
 "assets.maxcut_datasets" = ["*.json"]
-"assets.precomputed_bitstrings" = ["*.json"]
-"assets.precomputed_merit_factors" = ["*.json"]
+"assets.precomputed_bitstrings" = ["*.npy"]
+"assets.precomputed_merit_factors" = ["*.npy"]
 [tool.setuptools.dynamic]
 
 [tool.pyright]
