--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,13 +91,12 @@ omit = [
     "qokit/fur/mpi_custatevec/*",
     "qokit/fur/diagonal_precomputation/gpu_numba.py",
     ]
-   
+[tool.setuptools.packages.find]
+where = ["qokit"]    
 
 [tool.setuptools.package-data]
-assets = ["*.json"]
-"assets.maxcut_datasets" = ["*.json"]
-"assets.precomputed_bitstrings" = ["*.npy"]
-"assets.precomputed_merit_factors" = ["*.npy"]
+assets = ["*.json", "*.npy"]
+
 [tool.setuptools.dynamic]
 
 [tool.pyright]
