--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,9 +92,12 @@ omit = [
     "qokit/fur/diagonal_precomputation/gpu_numba.py",
     ]
 [tool.setuptools.packages.find]
-where = ["assets"]    
+where = ["."]    
 
 
+[tool.setuptools.package-data]
+assets = ["*.json"]
+"assets.maxcut_datasets" = ["*.json"]
 
 [tool.setuptools.dynamic]
 
