--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,8 +96,8 @@ where = ["."]
 
 
 [tool.setuptools.package-data]
-assets = ["*.json"]
-"assets.maxcut_datasets" = ["*.json"]
+qokit.assets = ["*.json"]
+"qokit.assets.maxcut_datasets" = ["*.json"]
 
 [tool.setuptools.dynamic]
 
