to add the package data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,11 @@ where = ["."]
 
 
 [tool.setuptools.package-data]
-"*" = ["*.json"]
+"*" = ["*.json", ".npy"]
+
+
+[tool.setuptools.exclude-package-data]
+tests= ["*"]
 
 [tool.setuptools.dynamic]
 
