--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,7 +93,7 @@ omit = [
     ]
 [tool.setuptools.packages.find]
 where = ["."]
-exclude = ["tests.*", "tests"]    
+exclude = ["*.tests"]    
 
 
 [tool.setuptools.package-data]
