--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,7 +92,7 @@ omit = [
     "qokit/fur/diagonal_precomputation/gpu_numba.py",
     ]
 [tool.setuptools.packages.find]
-where = ["qokit.*"]
+where = ["qokit"]
 #exclude = ["*.tests"]    
 
 
