--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -62,7 +62,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-22.04, macos-11, windows-2022]
-        python: ["cp39", "cp310", "cp311"]
+        python: ["cp311"]
 
     steps:
       - uses: actions/checkout@v4
