--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -12,10 +12,11 @@ on: # workflow_dispatch
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
       matrix:
+       os: [ubuntu-latest, macos-latest]
        python-version: ["3.9", "3.10", "3.11"]
         
     steps:
