--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        #os: [ubuntu-22.04, macos-11, windows-2022]
-        os: [ubuntu-22.04]
+        os: [ubuntu-22.04, macos-11, windows-2022]
+        #os: [ubuntu-22.04]
         python: ["cp311"]
 
     steps:
