--- a/.github/workflows/qokit-python-only.yml
+++ b/.github/workflows/qokit-python-only.yml
@@ -31,10 +31,10 @@ jobs:
     - name: black check
       run:  |
           black --check .
-    - name: pip install 
+    - name: qokit install 
       run: |
         export QOKIT_PYTHON_ONLY=True
-        pip install .
+        echo $QOKIT_PYTHON_ONLY
     - name: Run tests and coverage
       run: |
          pytest --cov=qokit -rs tests --cov-fail-under=70
