change OS matrix

--- a/.github/workflows/qokit-python-only.yml
+++ b/.github/workflows/qokit-python-only.yml
@@ -3,14 +3,13 @@
 
 name: QOKit test (python simulator only)
 
-on: # workflow_dispatch
+on: 
  push:
-   branches: [ "main", "**" ]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
       matrix:
