--- a/.github/workflows/qokit-python-only-unix.yml
+++ b/.github/workflows/qokit-python-only-unix.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: QOKit test (python simulator only)
+name: QOKit test (python simulator only, Mac/Linux)
 
 on: 
  push:
