--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -22,16 +22,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: pip install   
       run: |
-        python -m pip install --upgrade pip
+          python -m pip install --upgrade pip
+          pip install .  
+    - name: Install additional dependencies
+      run: |
         pip install pipreqs black addheader pytest-cov pip-licenses
     - name: black check
       run:  |
           black --check .
-    - name: pip install   
-      run: |
-          pip install .  
     - name: Run tests 
       run: |
          pytest --cov=qokit --cov-fail-under=75 -rs tests 
