--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers=[
 version = "0.2.0"
 requires-python = ">=3.9.0"
 dependencies = [
+	'types-pkg-resources==0.1.3',
     'networkx>=3.0.0',
     'importlib-resources>=5.2.2',
     'numba>=0.56.4,<1',
