--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -32,6 +32,7 @@ jobs:
     - name: pip install   
       run: |
           pip install .  
+          make -C qokit/fur/c/csim/src/
     - name: Run tests 
       run: |
          pytest --cov=qokit --cov-fail-under=75 -rs tests 
