--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     'seaborn>=0.12.2',
     'sympy>=1.12',
     'tqdm>=4.65.0',
+    'types-pkg-resources==0.1.3',
 ]
 
 [project.optional-dependencies]
