--- a/.github/workflows/qokit-python-only-win.yml
+++ b/.github/workflows/qokit-python-only-win.yml
@@ -31,7 +31,7 @@ jobs:
           black --check .
     - name: pip install 
       run: |
-        SET QOKIT_PYTHON_ONLY=True 
+        set QOKIT_PYTHON_ONLY=True 
         pip install .
     - name: Run tests and coverage
       run: |
