--- a/.github/workflows/qokit-python-only-mac.yml
+++ b/.github/workflows/qokit-python-only-mac.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [macos-12]
         python-version: ["3.9", "3.10", "3.11"]
         
     steps:
