added types-pkg-resources explicit version

--- a/.github/workflows/qokit-python-only-win.yml
+++ b/.github/workflows/qokit-python-only-win.yml
@@ -31,7 +31,8 @@ jobs:
           black --check .
     - name: pip install 
       run: |
-        echo "{QOKIT_PYTHON_ONLY}={True}" >> $GITHUB_ENV 
+        set QOKIT_PYTHON_ONLY=True
+        echo "%PATH%" 
         pip install .
     - name: Run tests and coverage
       run: |
