added types-pkg-resources explicit version

--- a/.github/workflows/qokit-python-only-win.yml
+++ b/.github/workflows/qokit-python-only-win.yml
@@ -32,7 +32,7 @@ jobs:
     - name: pip install 
       run: |
         set QOKIT_PYTHON_ONLY=True
-        echo "%PATH%" 
+        echo %PATH% 
         pip install .
     - name: Run tests and coverage
       run: |
