--- a/.github/workflows/qokit-python-only-mac.yml
+++ b/.github/workflows/qokit-python-only-mac.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12]
+        os: [macos-latest]
         python-version: ["3.9", "3.10", "3.11"]
         
     steps:
@@ -30,8 +30,7 @@ jobs:
       run:  |
           black --check .
     - name: pip install 
-      run: |
-        export QOKIT_PYTHON_ONLY=True 
+      run: | 
         pip install .
     - name: Run tests and coverage
       run: |
