--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -12,13 +12,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["cp39", "cp310", "cp311"]
 
     steps:
       - uses: actions/checkout@v4
       - name: Build Wheels
-        uses: pypa/cibuildwheel@v2.20.0
-      - uses: actions/upload-artifact@v4.3.5
+        uses: pypa/cibuildwheel@v2.16.5
+      - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
 
@@ -26,10 +26,10 @@ jobs:
     name: Build Source Distribution
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Build sdist
         run: pipx run build --sdist
-      - uses: actions/upload-artifact@v4.3.5
+      - uses: actions/upload-artifact@v3
         with:
           path: dist/*.tar.gz  
 
