--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -12,7 +12,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["cp39", "cp310", "cp311"]
+        python-version: ["3.9", "3.10", "3.11"]
+        #python: ["cp311"]
 
     steps:
       - uses: actions/checkout@v4
@@ -26,7 +27,7 @@ jobs:
     name: Build Source Distribution
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: Build sdist
         run: pipx run build --sdist
       - uses: actions/upload-artifact@v3
