--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -13,7 +13,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         #python-version: ["3.9", "3.10", "3.11"]
-        python-version: ["cp310","cp311"]
+        # python-version: ["cp310","cp311"]
+        python-version: '3.x'
         #python: ["cp311"]
 
     steps:
@@ -23,7 +24,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
-          compression-level: 0
+          compression-level: 9
 
   build_sdist:        
     name: Build Source Distribution
