--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -29,25 +29,34 @@ jobs:
 
   build_sdist:        
     name: Build Source Distribution
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.9", "3.10", "3.11"]
     steps: 
       - uses: actions/checkout@v3
       - name: Build sdist
         run: pipx run build --sdist
       - uses: actions/upload-artifact@v4
         with:
+          name: ${{ matrix.os }}-${{ matrix.python-version }}
           path: dist/*.tar.gz  
 
   upload_pypi:
     needs: [build_sdist, build_wheels]
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.9", "3.10", "3.11"]
     environment: pypi
     permissions: 
       id-token: write
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: artifact
+          name: ${{ matrix.os }}-${{ matrix.python-version }}
           path: dist
 
       - uses: pypa/gh-action-pypi-publish@release/v1      
