--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -29,34 +29,25 @@ jobs:
 
   build_sdist:        
     name: Build Source Distribution
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.9", "3.10", "3.11"]
+    runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v3
       - name: Build sdist
         run: pipx run build --sdist
       - uses: actions/upload-artifact@v4
         with:
-          name: artifact-${{ matrix.os }}-${{ matrix.python-version }}
           path: dist/*.tar.gz  
 
   upload_pypi:
     needs: [build_sdist, build_wheels]
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.9", "3.10", "3.11"]
+    runs-on: ubuntu-latest
     environment: pypi
     permissions: 
       id-token: write
     steps:
       - uses: actions/download-artifact@v4
         with:
-          pattern: artifact-*
+          pattern: artifact*
           merge-multiple: true
           path: dist
 
