--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -7,20 +7,23 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{ matrix.python }} - ${{matrix.os}}
+    name: Build wheels on  ${{matrix.python-version}} - ${{matrix.os}}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-22.04, macos-11, windows-2022]
-        python: ["cp311"]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v4
       - name: Build Wheels
-        uses: pypa/cibuildwheel@v2.16.1
-      - uses: actions/upload-artifact@v3
+        uses: pypa/cibuildwheel@v2.19.2
+      - uses: actions/upload-artifact@v4
         with:
+          name: artifact-${{ matrix.os }}-${{ matrix.python-version }}
           path: ./wheelhouse/*.whl
+          overwrite: true
+          compression-level: 9
 
   build_sdist:        
     name: Build Source Distribution
@@ -29,7 +32,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build sdist
         run: pipx run build --sdist
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           path: dist/*.tar.gz  
 
@@ -41,9 +44,9 @@ jobs:
       id-token: write
     if: github.event_name == 'release' && github.event.action == 'published'  
     steps:
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
-          name: artifact
+          name: artifact*
           path: dist
       - uses: pypa/gh-action-pypi-publish@release/v1      
         with:
