--- a/.github/workflows/qokit-python-only-unix.yml
+++ b/.github/workflows/qokit-python-only-unix.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Run tests (python simulator only, Linux)
+name: Run tests (python simulator only, unix)
 
 on: 
  push:
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ["3.9", "3.10", "3.11"]
         
     steps:
