--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ["3.9", "3.10", "3.11"]   
     steps:
     - uses: actions/checkout@v3
@@ -29,8 +29,6 @@ jobs:
       run:  |
           black --check .      
     - name: pip install
-      env:
-        QOKIT_PYTHON_ONLY: True  
       run: |
         pip install . 
     - name: Run tests 
