--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -33,6 +33,7 @@ jobs:
         QOKIT_PYTHON_ONLY: false
       run: |
         pip install . 
+    - run: ls ~/QOKit  ~/QOKit/qokit/fur/c/csim 
     - name: Run tests 
       env:
         QOKIT_PYTHON_ONLY: false    
