--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -33,7 +33,7 @@ jobs:
         QOKIT_PYTHON_ONLY: false
       run: |
         pip install -e . 
-    - run: ls /home/runner/work/QOKit/  /home/runner/work/QOKit/QOKit/qokit/fur/c/csim 
+    - run: find /home/runner/work/QOKit/ -name "*libcsim*.so"
     - name: Run tests 
       env:
         QOKIT_PYTHON_ONLY: false    
