--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,9 @@ dependencies = [
     'pathos>=0.3.0',
     'pytest>=7.3.1',
     'pytket>=1.22.0',
-    'pytket-qiskit==0.46.0',
-    'pytket-quantinuum==0.25.0',
-    'qiskit==0.45.3',
+    'pytket-qiskit>=0.46.0',
+    'pytket-quantinuum>=0.25.0',
+    'qiskit>=0.45.3',
     'qiskit-finance==0.3.4',
     'qiskit-ibmq-provider==0.20.2',
     'scipy>=1.10.1',
