--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     'pandas>=2.0.1',
     'pathos>=0.3.0',
     'pytest>=7.3.1',
-    'pytket>=1.22.0',
+    'pytket',
     'pytket-qiskit>=0.46.0',
     'pytket-quantinuum>=0.25.0',
     'qiskit>=0.45.3',
