--- a/.github/workflows/qokit-python-only.yml
+++ b/.github/workflows/qokit-python-only.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pipreqs black addheader pytest-cov pip-licenses
+        pip install pipreqs black addheader pytest-cov pip-licenses types-pkg-resources
     - name: black check
       run:  |
           black --check .
