--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,16 +19,16 @@ classifiers=[
 version = "0.1.4"
 requires-python = ">=3.9.0"
 dependencies = [
-    'networkx',
+    'networkx==3.0.0',
     'importlib-resources>=5.2.2',
     'numba>=0.56.4,<1',
     'pandas>=2.0.1',
     'pathos>=0.3.0',
     'pytest>=7.3.1',
-    'pytket',
-    'pytket-qiskit>=0.46.0',
-    'pytket-quantinuum>=0.25.0',
-    'qiskit>=0.45.3',
+    'pytket==1.22.0',
+    'pytket-qiskit==0.46.0',
+    'pytket-quantinuum==0.25.0',
+    'qiskit==0.45.3',
     'qiskit-finance==0.3.4',
     'qiskit-ibmq-provider==0.20.2',
     'scipy>=1.10.1',
