--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -29,9 +29,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pipreqs black addheader pytest-cov pip-licenses types-pkg-resources==0.1.3
-    - name: black check
-      run:  |
-          black --check .
+    # - name: black check
+    #   run:  |
+    #       black --check .
     - name: pip install   
       run: |
           pip install .  
