Adding all portfolio tests and pinning quantinuum dependecy to 0.42.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,7 @@ dependencies = [
     'docplex==2.28.240',
     'yfinance==0.2.49',
     'pytket-qiskit>=0.59',
-    'pytket-quantinuum',
-    #'pytket-quantinuum==0.42.0',
+    'pytket-quantinuum==0.42.0',
     'qiskit>=1.0',
     'scipy>=1.10.1',
     'seaborn>=0.12.2',
