Adding objective functions and circuit modules for Sk model.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     'docplex==2.28.240',
     'yfinance==0.2.49',
     'pytket-qiskit==0.62',
-    'pytket-quantinuum==0.42.0',
+    #'pytket-quantinuum==0.42.0',
+    'pytket-quantinuum',
     'qiskit==1.3.1',
     'scipy>=1.10.1',
     'seaborn>=0.12.2',
