--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 160
-target-version = ['py38', 'py39', 'py310', 'py311']
+target-version = ['py310', 'py311']
 force-exclude = '''
 (
   /(
