Editting name of Pypi build for Linux and Mac

--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   release-build:
+    name: Build wheels on ${{ matrix.python }} - ${{matrix.os}}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
