updating packagr versions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,13 @@ dependencies = [
     'pandas>=2.0.1',
     'pathos>=0.3.0',
     'pytest>=7.3.1',
-    'pytket==1.37.0',
+    'pytket==2.1.0',
     'docplex==2.28.240',
     'yfinance==0.2.59',
-    'pytket-qiskit==0.62',
-    'pytket-quantinuum==0.42.0',
-    'qiskit==1.3.1',
+    'pytket-qir==0.21.0',
+    'pytket-qiskit==0.66.0',
+    'pytket-quantinuum==0.45.0',
+    'qiskit==1.4.2',
     'scipy>=1.10.1',
     'seaborn>=0.12.2',
     'sympy>=1.12',
